--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <source src="/audio/boing.mp3"/>
     </audio>
 
-    <audio">
+    <audio>
       <source src="/audio/woosh.wav"/>
     </audio>
 
