--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         
         </div>
 
-        <div class="bg-color-02 rounded d-flex flex-sm-column h-100 w-100 my-2 my-sm-0 mx-sm-2 ">
+        <div class="bg-color-02 rounded d-flex flex-sm-column w-100 my-2 my-sm-0 mx-sm-2 ">
             
             <div class="h-50 flex-container h-100 w-100" >
               <i class="bi  dice fc-03 bi-dice-3" id="diceModel" ></i>
